--- a/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/json_path_transform/json_path_array_map.conf
+++ b/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/json_path_transform/json_path_array_map.conf
@@ -26,7 +26,7 @@ source {
     plugin_output = "fake"
     row.num = 100
     string.fake.mode = "template"
-    string.template=["{"data":{"c_map_array":[{"c_string":"this is a string","c_boolean": "true","c_integer": "42"},{"c_string":"this is a string","c_boolean": "true","c_integer": "42"}]}}"]
+    string.template=["{"data":{"c_map_string_array":[{"c_string_1":"c_string_1","c_string_2":"c_string_2","c_string_3":"c_string_3"},{"c_string_1":"c_string_1","c_string_2":"c_string_2","c_string_3":"c_string_3"}],"c_map_int_array":[{"c_int_1":1,"c_int_2":2,"c_int_3":3},{"c_int_1":1,"c_int_2":2,"c_int_3":3}]}}"]
     schema = {
       fields {
         data = "string"
@@ -42,16 +42,22 @@ transform {
     columns = [
      {
         "src_field" = "data"
-        "path" = "$.data.c_map_array"
-        "dest_field" = "c_map_array_1"
+        "path" = "$.data.c_map_string_array"
+        "dest_field" = "c_map_string_array_1"
         "dest_type" = "array<map<string, string>>"
-     }
+     },
+    {
+       "src_field" = "data"
+       "path" = "$.data.c_map_int_array"
+       "dest_field" = "c_map_int_array_1"
+       "dest_type" = "array<map<int, int>>"
+    }
     ]
   }
     Sql {
     plugin_input = "fake1"
     plugin_output = "fake2"
-      query = "select c_map_array_1 from dual"
+      query = "select c_map_string_array_1,c_map_int_array_1 from dual"
     }
 }
 
@@ -73,7 +79,17 @@ sink {
             field_value = [
               {
                 rule_type = NOT_NULL
-                equals_to = [{c_string=this is a string, c_boolean=true, c_integer=42}, {c_string=this is a string, c_boolean=true, c_integer=42}]
+                equals_to = [{c_string_1=c_string_1, c_string_2=c_string_2, c_string_3=c_string_3}, {c_string_1=c_string_1, c_string_2=c_string_2, c_string_3=c_string_3}]
+              }
+            ]
+          },
+          {
+            field_name = c_map_int_array_1
+            field_type = "array<map<int, int>>"
+            field_value = [
+              {
+                rule_type = NOT_NULL
+                equals_to = [{c_int_1=1, c_int_2=2, c_int_3=3}, {c_int_1=1, c_int_2=2, c_int_3=3}]
               }
             ]
           }
