[Fix][transform-v2] support max/min function

--- a/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/sql_transform/func_array_max_min.conf
+++ b/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/sql_transform/func_array_max_min.conf
@@ -21,6 +21,7 @@
 
 env {
    job.mode = "BATCH"
+   parallelism = 1
  }
 
 source {
@@ -30,7 +31,7 @@ source {
       fields {
         c_string = string
         c_num_array = "array<int>"
-        c_string_array = "array<String>"
+        c_string_array = "array<string>"
       }
     }
     rows = [
