[Fix][transform-v2] support max/min function

--- a/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/sql_transform/func_array_max_min.conf
+++ b/seatunnel-e2e/seatunnel-transforms-v2-e2e/seatunnel-transforms-v2-e2e-part-2/src/test/resources/sql_transform/func_array_max_min.conf
@@ -48,10 +48,10 @@ source {
      plugin_input = "fake"
      plugin_output = "fake1"
      query = """select c_string,
-                     max(c_num_array) as c_num_max_array,
-                     min(c_num_array) as c_num_min_array,
-                     max(c_string_array) as c_string_max_array,
-                     min(c_string_array) as c_string_min_array
+                     ARRAY_MAX(c_num_array) as c_num_max_array,
+                     ARRAY_MIN(c_num_array) as c_num_min_array,
+                     ARRAY_MAX(c_string_array) as c_string_max_array,
+                     ARRAY_MIN(c_string_array) as c_string_min_array
                      from fake1"""
    }
  }
