[Fix][connector-http] fix when post have param

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-http-e2e/src/test/resources/http_post_param_json_to_assert.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-http-e2e/src/test/resources/http_post_param_json_to_assert.conf
@@ -25,8 +25,11 @@ source {
     plugin_output = "http"
     url = "http://mockserver:1080/example/jsonBody/dynamic/param"
     method = "POST"
-    body="{"id":1}"
+    body="""{"id":1,"pageIndex":"${pageIndex}"}"""
     format = "json"
+    params={
+       page: "${page}"
+    }
     pageing={
        page_field = pageIndex
        start_page_number = 2
