[Feature][Kafka] Support native format read/write kafka record

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
@@ -38,7 +38,7 @@ source {
       auto.offset.reset = "earliest"
       enable.auto.commit = "false"
     }
-    format = "COMPATIBLE_KAFKA_CONNECT_JSON"
+    format = "NATIVE"
     value_converter_schema_enabled = false
     consumer.group = "native_format_to_kafka"
   }
@@ -49,6 +49,6 @@ sink {
       is_native = true
       topic = "test_topic_native"
       bootstrap.servers = "kafkaCluster:9092"
-      format = json
+      format = "NATIVE"
   }
 }
