--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_sink_fake_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_sink_fake_to_kafka.conf
@@ -19,7 +19,7 @@ env {
   parallelism = 1
   job.mode = "BATCH"
 
-  # You can set spark configuration here
+  #spark config
   spark.app.name = "SeaTunnel"
   spark.executor.instances = 1
   spark.executor.cores = 1
@@ -28,25 +28,39 @@ env {
 }
 
 source {
-  Kafka {
-    topic = "test_topic_1"
-    bootstrap.servers = "kafkaCluster:9092"
-    kafka.config = {
-      client.id = client_1
-      max.poll.records = 500
-      auto.offset.reset = "earliest"
-      enable.auto.commit = "false"
+  FakeSource {
+    row.num = 10
+    map.size = 10
+    array.size = 10
+    bytes.length = 10
+    string.length = 10
+    schema = {
+      fields {
+        c_map = "map<string, smallint>"
+        c_array = "array<int>"
+        c_string = string
+        c_boolean = boolean
+        c_tinyint = tinyint
+        c_smallint = smallint
+        c_int = int
+        c_bigint = bigint
+        c_float = float
+        c_double = double
+        c_decimal = "decimal(30, 8)"
+        c_null = "null"
+        c_bytes = bytes
+        c_date = date
+        c_timestamp = timestamp
+      }
     }
-    format = "NATIVE"
-    value_converter_schema_enabled = false
-    consumer.group = "native_format_to_kafka"
   }
 }
 
 sink {
-  kafka {
-      topic = "test_topic_native"
-      bootstrap.servers = "kafkaCluster:9092"
-      format = "NATIVE"
+  Kafka {
+    bootstrap.servers = "kafkaCluster:9092"
+    topic = "test_topic_1"
+    format = json
+    partition_key_fields = ["c_map", "c_string"]
   }
 }
