[Feature][Kafka] Support native format read/write kafka record

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
@@ -31,12 +31,8 @@ source {
   Kafka {
     topic = "test_topic_1"
     bootstrap.servers = "kafkaCluster:9092"
-    kafka.config = {
-      client.id = client_1
-      max.poll.records = 500
-      auto.offset.reset = "earliest"
-      enable.auto.commit = "false"
-    }
+    start_mode = "earliest"
+    format_error_handle_way = skip
     format = "NATIVE"
     value_converter_schema_enabled = false
     consumer.group = "native_format_to_kafka"
