[Feature][Kafka] Support native format read/write kafka record

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
@@ -18,30 +18,22 @@
 env {
   parallelism = 1
   job.mode = "BATCH"
-
-  # You can set spark configuration here
-  spark.app.name = "SeaTunnel"
-  spark.executor.instances = 1
-  spark.executor.cores = 1
-  spark.executor.memory = "1g"
-  spark.master = local
 }
 
 source {
   Kafka {
-    topic = "test_topic_1"
+    topic = "test_topic_native_source"
     bootstrap.servers = "kafkaCluster:9092"
     start_mode = "earliest"
     format_error_handle_way = skip
     format = "NATIVE"
     value_converter_schema_enabled = false
-    consumer.group = "native_format_to_kafka"
   }
 }
 
 sink {
   kafka {
-      topic = "test_topic_native"
+      topic = "test_topic_native_sink"
       bootstrap.servers = "kafkaCluster:9092"
       format = "NATIVE"
   }
