[Feature][Kafka] Support native format read/write kafka record

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
@@ -22,7 +22,7 @@ env {
 
 source {
   Kafka {
-    topic = "test_topic_native_source"
+    topic = "test_topic_source"
     bootstrap.servers = "kafkaCluster:9092"
     start_mode = "earliest"
     format_error_handle_way = skip
