[Feature][Kafka] Support native format read/write kafka record

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-kafka-e2e/src/test/resources/kafka_native_to_kafka.conf
@@ -35,6 +35,7 @@ source {
     format_error_handle_way = skip
     format = "NATIVE"
     value_converter_schema_enabled = false
+    consumer.group = "native_group"
   }
 }
 
